--- a/Attributes.html
+++ b/Attributes.html
@@ -11,14 +11,28 @@
     <title>HTML Lesson</title>
   </head>
   <body>
-    <button disabled>Sono disabilitato</button>
     <div>
+      <h3>Bottone disabilitato</h3>
+      <button disabled>Sono disabilitato</button>
+    </div>
+    <hr />
+    <div>
+      <h3>Checkbox Selezionata</h3>
       <input type="checkbox" name="Scales" id="Scales" checked />
       <label for="Scales">Prova 1</label>
       <input type="checkbox" name="Scales" id="Scales" />
       <label for="Scales">Prova 2</label>
     </div>
+    <hr />
     <div>
+      <h3>Number area</h3>
+      <label for="number">
+        <input type="number" min="0" max="100" step="2" />
+      </label>
+    </div>
+    <hr />
+    <div>
+      <h3>Date area</h3>
       <input
         type="date"
         start="2022-12-01"
