--- a/navbar.html
+++ b/navbar.html
@@ -4,18 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width = device-width" />
     <title>Header example</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <a>Navbar</a>
       <nav>
+        <a class="logo">Navbar</a>
         <ul>
-          <li>Home</li>
-          <li>Link</li>
-          <li>Dropdown</li>
-          <li disabled>Disabled</li>
-          <li><input type="text" placeholder="Search" /></li>
-          <li><button>Search</button></li>
+          <li><a href="https://google.it">Home</a></li>
+          <li><a href="https://google.it">Link</a></li>
+          <li><a href="https://google.it">Dropdown</a></li>
+          <li><a href="https://google.it" >Disabled</a></li>
+          <input type="text" placeholder="Search" />
+          <button>Search</button></li>
         </ul>
       </nav>
     </header>
