modellazione elementi html con css

--- a/navbar.html
+++ b/navbar.html
@@ -9,14 +9,22 @@
   <body>
     <header>
       <nav>
-        <a class="logo">Navbar</a>
         <ul>
-          <li><a href="https://google.it">Home</a></li>
-          <li><a href="https://google.it">Link</a></li>
-          <li><a href="https://google.it">Dropdown</a></li>
-          <li><a href="https://google.it" >Disabled</a></li>
-          <input type="text" placeholder="Search" />
-          <button>Search</button></li>
+          <li><a href="#Home" class="logo">Navbar</a></li>
+          <li>
+            <a href="https://google.it" class="option" id="option1">Home</a>
+          </li>
+          <li>
+            <a href="https://google.it" class="option" id="option2">Link</a>
+          </li>
+          <li>
+            <a href="https://google.it" class="option" id="option3">Dropdown</a>
+          </li>
+          <li>
+            <a href="https://google.it" class="option" id="option4">Disabled</a>
+          </li>
+          <li><input type="text" placeholder="Search" class="search" /></li>
+          <li><button class="search-button">Search</button></li>
         </ul>
       </nav>
     </header>
