--- a/navbar.html
+++ b/navbar.html
@@ -8,25 +8,32 @@
   </head>
   <body>
     <header>
-      <nav>
+      <div class="navBar">
         <ul>
           <li><a href="#Home" class="logo">Navbar</a></li>
           <li>
-            <a href="https://google.it" class="option" id="option1">Home</a>
+            <a href="https://google.it" class="menu-voice" id="option1">Home</a>
           </li>
           <li>
-            <a href="https://google.it" class="option" id="option2">Link</a>
+            <a href="https://google.it" class="menu-voice" id="option2">Link</a>
           </li>
           <li>
-            <a href="https://google.it" class="option" id="option3">Dropdown</a>
+            <a href="https://google.it" class="menu-voice" id="option3"
+              >Dropdown</a
+            >
           </li>
           <li>
-            <a href="https://google.it" class="option" id="option4">Disabled</a>
+            <a href="https://google.it" class="menu-voice" id="option4"
+              >Disabled</a
+            >
           </li>
           <li><input type="text" placeholder="Search" class="search" /></li>
           <li><button class="search-button">Search</button></li>
+
+          <img class="hamburger-icon"src="Hamburger_icon.svg.png"
+          alt="hamburger_menu" / width="64px" height="64px">
         </ul>
-      </nav>
+      </div>
     </header>
   </body>
 </html>
